examples/twistrs-grpc/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            codec_type: auto
            stat_prefix: ingress_http
            access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
                  path: /dev/stdout
            route_config:
              name: local_route
              virtual_hosts:
              - name: www
                domains:
                - "*"
                cors:
                  allow_origin_string_match:
                  - prefix: "*"
                  allow_methods: "GET, POST, OPTIONS"
                  allow_headers: "*"
                  filter_enabled:
                    default_value:
                      numerator: 100
                      denominator: HUNDRED
                    runtime_key: cors.www.enabled
                  shadow_enabled:
                    default_value:
                      numerator: 0
                      denominator: HUNDRED
                    runtime_key: cors.www.shadow_enabled
                routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: enumeration_service
            http_filters:
            - name: envoy.filters.http.cors
            - name: envoy.filters.http.grpc_web
            - name: envoy.filters.http.router
  clusters:
  - name: enumeration_service
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: enumeration_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: twistrs-grpc-server
                port_value: 50051

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
